[gd_scene load_steps=15 format=1]

[ext_resource path="res://scripts/main_splash.gd" type="Script" id=1]
[ext_resource path="res://misc/mhp.tex" type="Texture" id=2]
[ext_resource path="res://misc/blink.anm" type="Animation" id=3]
[ext_resource path="res://misc/fade.tex" type="Texture" id=4]
[ext_resource path="res://misc/dotted-fadein.anm" type="Animation" id=5]
[ext_resource path="res://misc/dotted-fadout.anm" type="Animation" id=6]
[ext_resource path="res://drake/drake.tex" type="Texture" id=7]
[ext_resource path="res://drake/drake-fly-r.anm" type="Animation" id=8]
[ext_resource path="res://misc/r2l.anm" type="Animation" id=9]
[ext_resource path="res://nyan/nyan.tex" type="Texture" id=10]
[ext_resource path="res://misc/l2r.anm" type="Animation" id=11]
[ext_resource path="res://nyan/nyan-run-r.anm" type="Animation" id=12]
[ext_resource path="res://fonts/apartNES.fnt" type="BitmapFont" id=13]
[ext_resource path="res://misc/mm.ogg" type="AudioStream" id=14]

[node name="Splash" type="Node"]

script/script = ExtResource( 1 )

[node name="Title" type="Node" parent="."]

[node name="Sprite" type="Sprite" parent="Title"]

transform/pos = Vector2( 160, 144 )
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title/Sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/blink = ExtResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Sprite 2" type="Sprite" parent="Title"]

transform/pos = Vector2( 160, 144 )
texture = ExtResource( 4 )
vframes = 2
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title/Sprite 2"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/dotted-fadein = ExtResource( 5 )
anims/dotted-fadout = ExtResource( 6 )
playback/active = true
playback/speed = 2.0
blend_times = [  ]
autoplay = ""

[node name="Drake" type="Node" parent="."]

editor/display_folded = true

[node name="Sprite" type="Sprite" parent="Drake"]

transform/pos = Vector2( 481.821, 144.141 )
z/z = 2
texture = ExtResource( 7 )
vframes = 9
hframes = 4
frame = 1
__meta__ = { "_edit_ik_":true }

[node name="AnimationPlayer" type="AnimationPlayer" parent="Drake/Sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/drake-fly-r = ExtResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "drake-fly-r"

[node name="AnimationPlayer 2" type="AnimationPlayer" parent="Drake/Sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/r2l = ExtResource( 9 )
playback/active = true
playback/speed = 0.56
blend_times = [  ]
autoplay = ""

[node name="Nyan" type="Node" parent="."]

editor/display_folded = true

[node name="Sprite" type="Sprite" parent="Nyan"]

transform/pos = Vector2( -140, 203 )
texture = ExtResource( 10 )
vframes = 5
hframes = 4
frame = 13

[node name="AnimationPlayer" type="AnimationPlayer" parent="Nyan/Sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/l2r = ExtResource( 11 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="AnimationPlayer 2" type="AnimationPlayer" parent="Nyan/Sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/nyan-run-r = ExtResource( 12 )
next/nyan-run-r = ""
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Instrunctions" type="Node" parent="."]

editor/display_folded = true

[node name="Text" type="Label" parent="Instrunctions"]

visibility/visible = false
rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 213.0
margin/bottom = 193.0
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color = Color( 0.180392, 0.270588, 0.231373, 1 )
custom_colors/font_color_shadow = Color( 0.67451, 0.776471, 0.690196, 1 )
text = "INSTRUNCTIONS\nOne press - Block\nDouble press - Run\nHold button - Attack"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Instrunctions/Text"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Sprite" type="Sprite" parent="Instrunctions"]

visibility/visible = false
transform/pos = Vector2( 160, 144 )
z/z = 2
texture = ExtResource( 4 )
vframes = 2
hframes = 2
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Instrunctions/Sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/dotted-fadein = ExtResource( 5 )
anims/dotted-fadout = ExtResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 14 )
stream/play = false
stream/loop = true
stream/volume_db = 11.3171
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 6.0
one_shot = true
autostart = true

[node name="Timer 2" type="Timer" parent="."]

process_mode = 0
wait_time = 4.0
one_shot = true
autostart = false

[node name="Timer 3" type="Timer" parent="."]

process_mode = 0
wait_time = 2.0
one_shot = true
autostart = false

[connection signal="finished" from="Title/Sprite 2/AnimationPlayer" to="." method="_on_Text_AnimationPlayer_finished"]

[connection signal="finished" from="Drake/Sprite/AnimationPlayer 2" to="." method="_on_AnimationPlayer_2_finished"]

[connection signal="finished" from="Nyan/Sprite/AnimationPlayer" to="." method="_on_AnimationPlayer_finished"]

[connection signal="finished" from="Instrunctions/Sprite/AnimationPlayer" to="." method="_on_Fade2_AnimationPlayer_finished"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="Timer 3" to="." method="_on_Timer_3_timeout"]


